Standardised all collabsibles to 'revealable'

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -50,7 +50,7 @@ block content
 					li
 						a(href="callout.html") Callout
 					li
-						a(href="collapse.html") Collapse
+						a(href="revealable.html") Revealable
 					li
 						a(href="charts.html") Charts
 					//li
