--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -28,7 +28,7 @@ html
 		// Javascript
 		script(src="js/vendor/jquery-1.11.3.min.js")
 		script(src="js/beta-dap-accordion.js")
-		script(src="js/collapse.js")
+		script(src="js/revealable.js")
 		script(src="js/prism.js")
 		script(src="js/smooth.js")
 		script.
