--- a/libs/template/sidebar-modules.jade
+++ b/libs/template/sidebar-modules.jade
@@ -1,7 +1,7 @@
 - var section = "Modules"
 +sidebar([
 	{href: "callout.html", title: "Callout"},
-	{href: "collapse.html", title: "Collapse"},
+	{href: "revealable.html", title: "Revealable"},
 	{href: "charts.html", title: "Charts"},
 	{href: "section-notice.html", title: "Section Notices"},
 	{href: "toolbar.html", title: "Content toolbar"},
