--- a/libs/jade/revealable.jade
+++ b/libs/jade/revealable.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = "Collapse"
+	- var title = "Revealable"
 	- var sidebar = true
 
 extends ../template/template.jade
@@ -8,7 +8,7 @@ block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
 		{title: "Modules", href: "index.html#modules"},
-		{title: "Collapse"}])
+		{title: "Revealable"}])
 
 block sidebar
 	include ../template/sidebar-modules.jade
