Fixed issue with sidebar active state on budgeting tool

--- a/libs/tools.less
+++ b/libs/tools.less
@@ -115,6 +115,11 @@
 	.main-content__right {
 		padding-left: 0;
 	}
+
+	.section-nav li ul a:not([href]),
+	.side-nav-beta li ul a:not([href]) {
+		background-color: white;
+	}
 }
 
 /* Print styles
