Fixed issue where sidebar would be collapsed and unopenable for people without JS

--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -115,7 +115,10 @@
 	    	display: block;
 	    }
         &__heading + ul {
-            display: none;
+            display: block;
+            .js & {
+            	display: none;
+            }
         }
         .expanded& &__heading + ul {
             display: block;
