Fixed override on heading margins for sidebar

--- a/libs/tools.less
+++ b/libs/tools.less
@@ -120,6 +120,9 @@
 	.side-nav-beta li ul a:not([href]) {
 		background-color: white;
 	}
+	.section-nav__heading {
+		margin: 0 !important;
+	}
 }
 
 /* Print styles
