Fixed focus states around the site

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -176,7 +176,7 @@ select {
 input[type="file"] {
     border: none;
     width: 100%;
-    outline: none;
+    outline: 2px solid @heritage-yellow;
     display: block;
 }
 
@@ -212,7 +212,6 @@ textarea.form__field {
         &:before {
             content: '';
             display: block;
-            outline: none;
             width: 100%;
             height: 100%;
             top: 0;
