--- a/libs/modules/extent-switcher-modal.less
+++ b/libs/modules/extent-switcher-modal.less
@@ -15,7 +15,7 @@
         .dialog__close {
             position: absolute;
             color: @gray-3;
-            top: @box-spacing-vertical*2;
+            top: @box-spacing*1.6;
             padding: .75rem 1rem;
             z-index: 2;
             &:hover {
