--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -116,7 +116,8 @@
 	    }
         &__heading + ul {
             display: block;
-            .js & {
+            .js &,
+            .cabtools & {
             	display: none;
             }
         }
