--- a/libs/tools.less
+++ b/libs/tools.less
@@ -90,6 +90,13 @@
 	/* IE styles */
 	@import "base/ie";
 
+	min-height: 100px;
+	background: url('assets/loader.gif') no-repeat left center;
+	@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+	    background: url('assets/loader@2x.gif') no-repeat left center;
+	    background-size: 30px 30px;
+	}
+
 	/* Tools specific overrides */
 	a {
 		text-decoration: none !important;
@@ -116,12 +123,44 @@
 		padding-left: 0;
 	}
 
-	.section-nav li ul a:not([href]),
-	.side-nav-beta li ul a:not([href]) {
-		background-color: white;
-	}
-	.section-nav__heading {
-		margin: 0 !important;
+	.widget {
+		background-color: @white;
+		overflow: hidden;
+
+		.section-nav li ul a:not([href]),
+		.side-nav-beta li ul a:not([href]) {
+			background-color: transparent !important;
+		}
+
+		.section-nav li ul a.active,
+		.side-nav-beta li ul a.active {
+			background-color: @heritage-blue-lightest !important;
+		}
+
+		h2.section-nav__heading {
+			margin: 0 !important;
+		}
+		.footer-feedback__content {
+			padding: 1rem 0;
+		}
+
+		.a-external:after,
+		.a-external-link:after {
+		    font-family: 'cab-icons' !important;
+		    speak: none;
+		    font-style: normal;
+		    font-weight: normal;
+		    font-variant: normal;
+		    text-transform: none;
+		    line-height: 1;
+		    // Better Font Rendering
+		    -webkit-font-smoothing: antialiased;
+		    -moz-osx-font-smoothing: grayscale;
+		    padding-left: 0.5em;
+		    padding-right: 0.25em;
+		    color: @link-color;
+		    font-size: 75%;
+		}
 	}
 }
 
