--- a/libs/modules/extent-switcher-modal.less
+++ b/libs/modules/extent-switcher-modal.less
@@ -18,6 +18,7 @@
             top: @box-spacing*1.6;
             padding: .75rem 1rem;
             z-index: 2;
+            border: none;
             &:hover {
                 color: @heritage-blue;
             }
