Hiding mobile header on desktop

--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -50,6 +50,10 @@
         max-width: calc(250px); // For modern browsers
     }
 
+    img.main-header__img--mobile {
+        display: none;
+    }
+
     @media ( max-width: @screen-xs-max ) {
         display: block;
         background-color: @heritage-blue;
