Fixed height of button beside search in heading

--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -130,7 +130,7 @@ input.main-header__search__input {
 }
 
 .main-header__search__submit {
-    border: 1px solid @gray-1;
+    border: none;
     background: @gray-1;
     overflow: hidden;
     padding: .2em;
@@ -138,13 +138,14 @@ input.main-header__search__input {
     float: left;
     margin: 0 0 0 -1px;
     width: 2em;
+    height: 2em;
     color: @white;
 }
 
 .main-header__search__submit:hover, .main-header__search__submit:focus {
     background: @gray-0;
     color: @white;
-    border-color: @gray-0;
+    border: none;
 }
 
 @media ( max-width: @screen-xs-max ) {
