Updated field+button to use a search box example

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -442,6 +442,18 @@ input[class*="dob-"] {
     }
 }
 
+.field-group--buttons {
+    input:first-of-type {
+        border-radius: @form-border-radius 0 0 @form-border-radius;
+        width: 70%;
+        display: inline-block;
+    }
+    button {
+        width: 30%;
+        display: inline-block;
+    }
+}
+
 /* Search fields used in blocks */
 .search-inline {
     display: table;
