--- a/libs/jade/field-groups.jade
+++ b/libs/jade/field-groups.jade
@@ -46,22 +46,17 @@ block content
 
 			.example-box-plain
 				fieldset
-					label(for="field") Field group with buttons
+					label(for="field") Field group with button
 					.field-group.field-group--buttons
-						input#field(type="number")
-						div(style="display:table-cell;")
-						button.btn Week
-						button.btn Month
-						button.btn Year
+						input#field(type="text")
+						button.btn Search
 			pre
 				code.language-html
 					| &lt;fieldset&gt;
-					| 	&lt;label for="field"&gt;Field group with buttons&lt;/label&gt;
+					| 	&lt;label for="field"&gt;Field group with button&lt;/label&gt;
 					| 	&lt;div class="field-group field-group--buttons"&gt;
-					| 		&lt;input id="field" type="number"&gt;
-					| 		&lt;button class="btn"&gt;Week&lt;/button&gt;
-					| 		&lt;button class="btn"&gt;Month&lt;/button&gt;
-					| 		&lt;button class="btn"&gt;Year&lt;/button&gt;
+					| 		&lt;input id="field" type="text"&gt;
+					| 		&lt;button class="btn"&gt;Search&lt;/button&gt;
 					| 	&lt;/div&gt;
 					| &lt;/fieldset&gt;
 
