--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -176,8 +176,10 @@ select {
 input[type="file"] {
     border: none;
     width: 100%;
-    outline: 2px solid @heritage-yellow;
     display: block;
+    &:focus {
+        outline: 2px solid @heritage-yellow;
+    }
 }
 
 
