--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -107,6 +107,7 @@
     }
 
     @media screen and (max-width: @screen-xs-max) {
+       
         background-color: @white;
         margin: 0;
         border: 1px solid @gray-6;
@@ -127,6 +128,7 @@
         .expanded& &__heading {
         	border-bottom: 1px solid @gray-6;
         }
+        order: -1;
     }
 }
 
