Fixed hover border and large hit area for dialog buttons

--- a/libs/modules/dialog.less
+++ b/libs/modules/dialog.less
@@ -97,7 +97,7 @@
 	cursor: pointer;
 	overflow: hidden;
     text-align: center;
-    padding: 1rem;
+    padding: .7rem 1rem;
     margin: 0;
     right: 0;
 	.vertical-align(absolute);
@@ -110,6 +110,7 @@
 	    color: @white;
 	    background: none;
 	    box-shadow: none;
+	    border: none;
 	}
 }
 
