Added hover state for navigation parent

--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -70,6 +70,9 @@
 		&:visited {
 			color: @heritage-blue;
 		}
+		&:hover {
+			background-color: @gray-8;
+		}
 	}
 
 	&__parent + ul li {
@@ -107,7 +110,7 @@
     }
 
     @media screen and (max-width: @screen-xs-max) {
-       
+
         background-color: @white;
         margin: 0;
         border: 1px solid @gray-6;
