Fixed boreder bug on dropdowns

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -200,6 +200,7 @@ textarea.form__field {
     margin-right: @box-spacing-horizontal/2;
     z-index: 1;
     background-color: @gray-8;
+    border: none;
     input {
         display: inline-block;
         &:before {
@@ -427,6 +428,7 @@ input[class*="dob-"] {
         }
         select {
             .ie(width,100%);
+            border: 1px solid @gray-6;
         }
     }
     input:first-of-type {
