Make sure collapsible tables print expanded

--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -176,6 +176,14 @@ th {
 	border-bottom: 2px solid @gray-1;
 }
 
+tr {
+	border-width: 1px;
+}
+
+.table-collapse {
+	display: table-row;
+}
+
 .page-image {
 	margin: 20px 0;
 }
