Collapsible table print bug fixed

--- a/libs/tools.less
+++ b/libs/tools.less
@@ -171,7 +171,6 @@
 		display: none !important;
 	}
 	.table-collapse {
-		display: block !important;
-		width: 100%;
+		display: table-row !important;
 	}
 }
