Created new breakpoint specifically for the content width

--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -21,6 +21,7 @@
 @breakpoint-sm: 					600px; // Greater than or equal
 @breakpoint-md: 					840px; // Greater than or equal
 @breakpoint-lg: 					1080px; // Greater than or equal
+@breakpoint-content:				750px;
 
 // Breakpoints - pixel values
 @screen-xs-max: 					unit((@breakpoint-sm - 1), px);
