Implemented new content breakpoint, separate to the other page breakpoints

--- a/libs/modules/contents-page.less
+++ b/libs/modules/contents-page.less
@@ -28,7 +28,7 @@
         margin: @box-spacing 0;
     }
 
-    @media (max-width: @screen-xs-max) {
+    @media (max-width: @breakpoint-content) {
         margin-top: 0; // No breadcrumb trail
     }
 }
