--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -13,7 +13,7 @@
 	//padding: @box-spacing @box-spacing-vertical;
 	margin: 0;
 
-	@media ( max-width: @screen-xs-max ) {
+	@media ( max-width: @breakpoint-content ) {
 		float: none;
 		width: auto;
 		margin-top: @box-spacing*1.5;
@@ -109,7 +109,7 @@
 		}
     }
 
-    @media screen and (max-width: @screen-xs-max) {
+    @media screen and (max-width: @breakpoint-content) {
 
         background-color: @white;
         margin: 0;
@@ -138,7 +138,7 @@
 .side-nav {
 	.main-content__sidebar;
 
-	@media screen and (max-width: @screen-xs-max) {
+	@media screen and (max-width: @breakpoint-content) {
 		float: none;
 		width: 100%;
 	}
