Fixed sticky box padding

--- a/libs/mixins/callout.less
+++ b/libs/mixins/callout.less
@@ -60,7 +60,8 @@
 }
 
 *[class^="callout"],
-.dap-panel {
+.dap-panel,
+.box--sticky {
     padding: .75em 1em;
     padding: @box-spacing-vertical @box-spacing-horizontal;
     margin: @box-spacing-vertical 0;
