Added hover states for related sidebar items

--- a/libs/base/type.less
+++ b/libs/base/type.less
@@ -163,7 +163,8 @@ a {
     }
 }
 
-.articleContent a {
+.articleContent a,
+.side-links a {
     color: @link-color;
     text-decoration: none;
     &:active {
