--- a/libs/jade/extent.jade
+++ b/libs/jade/extent.jade
@@ -17,7 +17,30 @@ block sidebar
 
 block content
 	.dialog__mask(style="z-index: 2;")
-		.dialog.dialog--extent-picker(aria-describedby="dialog-1-main", aria-labelledby="dialog-1-label", role="alertdialog", style="z-index: 3;", tabindex="-1")
+
+		.dialog.dialog--simple.dialog--extent-picker(aria-describedby="dialog-1-main", aria-labelledby="dialog-1-label", role="alertdialog", style="z-index: 3;", tabindex="-1")
+			header.dialog__header
+				h2.dialog__title#dialog-1-label
+				button.dialog__close(data-action="close", type="button")
+					i(aria-hidden="true", class="dialog__close-icon")
+					span.dialog__close-text Close
+			.dialog__main#dialog-1-main
+				div
+					h2 Choose a location
+					p Advice can vary depending on where you live.
+					p For information that could help solve your problem, please choose your location.
+				ul.extent-selection
+					li
+						a.btn.btn-small(href="?lang=en-GB") England
+					li
+						a.btn.btn-small(href="?lang=en-NIR") Northern Ireland
+					li
+						a.btn.btn-small(href="?lang=en-SCT") Scotland
+					li
+						a.btn.btn-small(href="?lang=en-WLS") Wales
+			footer.dialog__footer
+
+		//.dialog.dialog--extent-picker(aria-describedby="dialog-1-main", aria-labelledby="dialog-1-label", role="alertdialog", style="z-index: 3;", tabindex="-1")
 			header.dialog__header
 				h2.dialog__title#dialog-1-label Where in the UK do you live?
 				button.dialog__close(data-action="close", type="button")
