Fixed bug causing excessive whitespace above heading

--- a/libs/modules/extent-switcher-modal.less
+++ b/libs/modules/extent-switcher-modal.less
@@ -7,6 +7,7 @@
 
     .dialog__header {
         background: @white;
+        padding: 0;
         .dialog__title {
             overflow: visible;
             height: auto;
@@ -27,6 +28,9 @@
             color: @heritage-blue;
             font-size: @font-size-larger;
         }
+    }
+    .dialog__main h2:first-child {
+        margin-top: 0;
     }
     .dialog__footer {
         display: none;
