Added white background to tables so they can be used in callouts

--- a/libs/base/tables.less
+++ b/libs/base/tables.less
@@ -8,6 +8,7 @@ table {
     border-collapse: collapse;
     //table-layout: fixed;
     width: 100%;
+    background-color: @white;
     .total,
     tfoot {
         font-weight: @font-weight-bolder;
