--- a/libs/base/type.less
+++ b/libs/base/type.less
@@ -131,7 +131,6 @@ small {
 }
 
 // Site wide links
-
 a {
     color: @link-color;
     text-decoration: none;
@@ -142,7 +141,7 @@ a {
         color: @link-hover-color;
         text-decoration: none;
         border-bottom: 1px solid @link-color;
-        //background-color:  lighten(@link-color, 70%);
+        background-color:  lighten(@link-color, 75%);
     }
 
     &:focus {
@@ -152,10 +151,12 @@ a {
 
     &:active {
         color: @link-active-color;
+        border-bottom-color: @link-active-color;
     }
 
     &:visited {
-        color: @link-color;
+        color: @link-visited-color;
+        border-bottom-color: @link-visited-color;
     }
 
     &:not([href]) {
@@ -163,27 +164,17 @@ a {
     }
 }
 
-.articleContent a,
-.side-links a {
-    color: @link-color;
-    text-decoration: none;
-    &:active {
-        color: @link-active-color;
-        border-bottom-color: @link-active-color;
-    }
-    &:visited {
-        color: @link-visited-color;
-        border-bottom-color: @link-visited-color;
-    }
-    &:hover,
-    &:focus {
-        color: @link-hover-color;
+// Overrides to prevent a carrying to everything
+.main-header,
+.main-breadcrumb,
+.section-nav,
+.main-footer {
+    a:hover,
+    a:active,
+    a:visited,
+    a:focus {
         text-decoration: none;
-        border-bottom-color: @link-hover-color;
-        background-color:  lighten(@link-color, 75%);
-    }
-    &:focus {
-        border-bottom: 0;
+        background: none;
     }
 }
 
