Added focus outline to buttons through their mixin

--- a/libs/mixins/buttons.less
+++ b/libs/mixins/buttons.less
@@ -30,6 +30,9 @@
     &:visited {
         color: @btn-text;
     }
+    &:focus {
+        outline: 2px solid @heritage-yellow;
+    }
 }
 
 .btn-small {
