Removed weird focus styles for 'sign out' link

--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -207,7 +207,8 @@ input.main-header__search__input {
 }
 
 .main-header__logout__button,
-.main-header__logout__button:hover {
+.main-header__logout__button:hover,
+.main-header__logout__button:focus {
     background: none;
     border: none;
     padding: 0;
