Refactor core JS, update revealables

--- a/libs/modules/revealable.less
+++ b/libs/modules/revealable.less
@@ -42,28 +42,7 @@
     }*/
 }
 
+.no-js .revealable {
+    padding: 1rem;
 
-// Accordions
-.accordion .group {
-    background: @white;
-    margin-bottom: 1em;
-}
-.accordion h3 {
-    margin: @box-spacing-horizontal @box-spacing-vertical 0 @box-spacing-vertical;
-    padding: @box-spacing-vertical @box-spacing-horizontal @box-spacing-vertical @box-spacing-horizontal*1.5;
-    cursor: pointer;
-
-    .no-js & {
-        cursor: default;
-    }
-
-    & > img:first-child {
-        position: absolute;
-        margin-left: -1.7em;
-        margin-top: .1em;
-    }
-}
-
-.accordionContent {
-    padding: 0 @box-spacing-horizontal @box-spacing-vertical @box-spacing-horizontal;
 }
