--- a/libs/site.less
+++ b/libs/site.less
@@ -49,7 +49,6 @@
 @import "modules/section-notice";
 @import "modules/decision-tree";
 @import "modules/extent-switcher";
-@import "modules/revealable";
 //@import "modules/staff";
 @import "modules/status";
 //@import "modules/boxes";
@@ -81,6 +80,7 @@
 @import "modules/overlay";
 @import "modules/adviser";
 @import "modules/notice";
+@import "modules/slide";
 
 /* IE styles */
 @import "base/ie";
