--- a/libs/jade/revealable.jade
+++ b/libs/jade/revealable.jade
@@ -22,62 +22,33 @@ block content
 
 			p Keep in mind hidden content can also be easy for users to miss, so they should be used sparingly or only with a good reason.
 			.example-box-plain
-				.revealable
-					.revealable-toggle Unstyled content inside header/toggle
-					.revealable-content
-						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
-						a.revealable-toggle-close Close
-			pre
-				code.language-html
-					| &lt;div class="revealable"&gt;
-					| 	&lt;div class="revealable-toggle"&gt;Unstyled content inside header/toggle&lt;/div&gt;
-					| 	&lt;div class="revealable-content"&gt;
-					| 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-					| 		&lt;a class="revealable-toggle-close"&gt;Close&lt;/a&gt;
-					| 	&lt;/div&gt;
-					| &lt;/div&gt;
-
-			.example-box-plain
-				.revealable
-					.revealable-toggle Revealables can be grouped
-					.revealable-content
-						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
-						a.revealable-toggle-close Close
-					.revealable-toggle Revealables can be grouped
-					.revealable-content
-						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
-						a.revealable-toggle-close Close
-			pre
-				code.language-html
-					| &lt;div class="revealable"&gt;
-					| 	&lt;div class="revealable-toggle"&gt;Revealables can be grouped&lt;/div&gt;
-					| 	&lt;div class="revealable-content"&gt;
-					| 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-					| 		&lt;a class="revealable-toggle-close"&gt;Close&lt;/a&gt;
-					| 	&lt;/div&gt;
-					| 	&lt;div class="revealable-toggle"&gt;Revealables can be grouped&lt;/div&gt;
-					| 	&lt;div class="revealable-content"&gt;
-					| 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-					| 		&lt;a class="revealable-toggle-close"&gt;Close&lt;/a&gt;
-					| 	&lt;/div&gt;
-					| &lt;/div&gt;
-
-		//
-			h2 Existing syntax
-			.example-box-plain
 				section.revealable
-					h3#heading-one.revealable__heading(aria-controls="revealable-1", aria-expanded="true", tabindex="0", title="Expand section") Heading one
-					div#revealable-1.revealable__content(aria-expanded="false", aria-hidden="false")
-						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
-						a.revealable__close(href="#") Close
-					h3#heading-two.revealable__heading(aria-controls="revealable-2", aria-expanded="false", tabindex="0", title="Expand section") Heading two
+					h3 Unstyled content inside header/toggle
+					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
+						
 			pre
 				code.language-html
 					| &lt;section class="revealable"&gt;
-					| 	&lt;h3 id="heading-one" aria-controls="revealable-1" aria-expanded="true" tabindex="0" title="Expand section" class="revealable__heading"&gt;Heading one&lt;/h3&gt;
-					| 	&lt;div id="revealable-1" aria-expanded="false" aria-hidden="false" class="revealable__content"&gt;
-					| 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-					| 		&lt;a href="#" class="revealable__close"&gt;Close&lt;/a&gt;
-					| 	&lt;/div&gt;
-					| 	&lt;h3 id="heading-two" aria-controls="revealable-2" aria-expanded="false" tabindex="0" title="Expand section" class="revealable__heading"&gt;Heading two&lt;/h3&gt;
+					| 	&lt;h3&gt;Unstyled content inside header/toggle&lt;/h3&gt;
+					| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
 					| &lt;/section&gt;
+
+			.example-box-plain
+				section.revealable
+					h3 Revealables can be grouped
+					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
+				section.revealable
+					h3 Revealables can be grouped
+					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.
+			pre
+				code.language-html
+					| &lt;section class="revealable"&gt;
+					| 	&lt;h3&gt;Revealables can be grouped&lt;/h3&gt;
+					| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
+					| &lt;/section&gt;
+					| &lt;section class="revealable"&gt;
+					| 	&lt;h3&gt;Revealables can be grouped&lt;/h3&gt;
+					| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
+					| &lt;/section&gt;
+
+
