--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -89,10 +89,12 @@ aside,
 .callout--inventive,
 .callout--generous,
 .callout--white {
-	border: 1px solid @gray-5;
-	padding: @box-spacing;
-	margin: @box-spacing 0;
-	//page-break-inside: avoid;
+	.revealable__heading {
+		//padding: 0;
+		&:after {
+			display: none;
+		}
+	}
 }
 
 .callout__link:after {
@@ -103,6 +105,7 @@ aside,
 .collapse-content,
 .revealable__content {
 	display: block !important;
+	border: none;
 }
 
 pre, blockquote {
