--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -27,28 +27,27 @@
 	overflow: visible;
 	background-color: none;
 
-	&.sibling {
-		border: 0 solid @inventive-teal;
-		border-top-width: .5;
-		background-color: @gray-8;
-		.section-nav__sibling a:hover {
-			background-color: @gray-6;
-			cursor: pointer;
-		}
-	}
-
-	a.active {
+	.active {
 		background-color: @heritage-blue-lightest;
 	}
 
-	li ul a:not([href]) {
+	li ul a:not([href]),
+	li ol a:not([href]) {
 		background-color: @heritage-blue-lightest;
+	}
+
+	ul,
+	ol {
+		padding: 0;
+		margin: 0;
 	}
 
 	ul {
 		list-style: none;
-		padding: 0;
-		margin: 0;
+	}
+
+	ol li {
+		color: @gray-3;
 	}
 
 	li {
@@ -63,7 +62,7 @@
 		}
 	}
 
-	&__parent {
+	a.section-nav__parent {
 		color: @heritage-blue;
 		font-weight: @font-weight-boldest;
 		font-size: @font-size-medium;
@@ -75,7 +74,9 @@
 		}
 	}
 
-	&__parent + ul li {
+	&__parent + ul li,
+	&__parent + ol li {
+		list-style-position: inside;
 		&:hover {
 			background-color: @gray-8;
 		}
