Added styles for new toolbar buttons

--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -286,3 +286,45 @@ button:disabled {
     background-color: rgba( 255,255,255,.7);
 }
 */
+
+.toolbar-button {
+    color: @link-color;
+    text-decoration: none;
+    padding: 0;
+    border-radius: 0;
+    background: none;
+    border: none;
+    border-bottom: 1px solid currentColor;
+    font-size: @font-size-small;
+    font-weight: normal;
+
+    &:hover,
+    &:focus {
+        color: @link-hover-color;
+        text-decoration: none;
+        background-color:  lighten(@link-color, 75%);
+        border: none;
+        border-bottom: 1px solid currentColor;
+    }
+
+    &:focus {
+        outline: 2px solid @heritage-yellow;
+        border-bottom: 0;
+    }
+
+    &:active {
+        color: @link-active-color;
+        border: none;
+        border-bottom: 1px solid currentColor;
+    }
+
+    &:visited {
+        color: @link-visited-color;
+        border: none;
+        border-bottom: 1px solid currentColor;
+    }
+
+    &:not([href]) {
+        text-decoration: none;
+    }
+}
