Calling js for tables

--- a/libs/jade/tables.jade
+++ b/libs/jade/tables.jade
@@ -13,6 +13,9 @@ block breadcrumbs
 block sidebar
 	include ../template/sidebar-styles.jade
 
+block script
+	script(src="js/table-collapse.js")
+
 block content
 	.articleContent
 		div
