Rearranged branding pages

--- a/libs/template/sidebar-brand.jade
+++ b/libs/template/sidebar-brand.jade
@@ -1,6 +1,6 @@
-- var section = "Brand"
+- var section = "Branding"
 +sidebar([
 	//{href: "cards.html", title: "Cards"},
-    {href: "speech-line.html", title: "Speech line"},
-	{href: "brand-icons.html", title: "Brand icons"}
+	{href: "brand-icons.html", title: "Brand icons"},
+    {href: "speech-line.html", title: "Speech line"}
 ])
