--- a/libs/mixins/buttons.less
+++ b/libs/mixins/buttons.less
@@ -26,6 +26,7 @@
         background-color: @btn-background-hover;
         outline: 0;
         color: @btn-text;
+        box-shadow: none;
     }
     &:visited {
         color: @btn-text;
