Fixed bug where visited button links had a purple bottom border

--- a/libs/mixins/buttons.less
+++ b/libs/mixins/buttons.less
@@ -30,6 +30,7 @@
     }
     &:visited {
         color: @btn-text;
+        border-color: @btn-border;
     }
     &:focus {
         outline: 2px solid @heritage-yellow;
