Get sticky working and add example

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -66,6 +66,8 @@ block content
 					li
 						a(href="notice.html") Browser notice
 					li
+						a(href="sticky.html") Sticky box
+					li
 						h3#modals Modals
 						ul
 							li
