--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -26,6 +26,9 @@
         @callout-border: @inventive-teal-light
     );
     .callout--border;
+    top: 0;
+    position: -webkit-sticky;
+    position: sticky;
 }
 
 // Green
