--- a/libs/template/sidebar-modules.jade
+++ b/libs/template/sidebar-modules.jade
@@ -7,6 +7,7 @@
 	{href: "toolbar.html", title: "Content toolbar"},
 	{href: "cookie-monster.html", title: "Cookie Monster"},
 	{href: "notice.html", title: "Browser notice"},
+	{href: "sticky.html", title: "Sticky box"},
 	{href: "extent.html", title: "Extent Switcher"}
 	//{href: "overlay.html", title: "Modal/Overlay"},
 	//{href: "reference.html", title: "Reference tool"}
