--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -282,6 +282,7 @@ html.no-js
 		script(src="js/revealable.js")
 		script(src="js/prism.js")
 		script(src="js/smooth.js")
+		script(src="js/jquery.fn.top-sticky.js")
 		//script(src="js/advisor.js")
 		script(src="js/sidebar.js")
 		//script(src="js/core.js")
